# TextLingo

./: .gitignore  LICENSE  README.md  README_cn.md  README_ja.md  RELEASE_GUIDE.md  dev.sh
.github/workflows/: ci.yml  pdf-translator-build.yml  release-dev.yml  release.yml
api/: .env.example  .env.test.example  .gitignore  Dockerfile  README.md  REDIS_CACHE_SETUP.md  UNIVERSAL_ASSISTANT_API_DOCS.md  UNIVERSAL_ASSISTANT_API_GUIDE.md  UNIVERSAL_ASSISTANT_BILLING_OPTIMIZATION.md  VOICE_SERVICE_README.md  alembic.ini  app.py  config.example.yml  config.yml  docker-compose.yml  env.example  fix_indentation.py  old_users.csv  replit_config.py  replit_requirements.txt  requirements.txt  setup_env.sh  setup_replit.py  start.sh  start_celery_and_api.sh  start_cloud_deploy.sh  start_dev.sh  test_api.py  test_deepseek_api.py  test_i18n_novels.py  test_universal_assistant_billing.py  test_voice_api.py  test_voice_fix.py  test_voice_service.py  日志优化配置说明.md
api/alembic/: README  env.py
api/app/: __init__.py  main.py
api/controllers/: material_controller.py  material_segment_controller.py  materials_factory_controller.py  setting_controller.py  user_grammar_controller.py  user_vocabulary_controller.py
api/docs/: HowToRun_cn.md  HowToRun_en.md  api.md
api/models/: material.py  (+5 more)
docker/: buildandpull.md  docker-compose.yml  mac_一键关闭_close.command  mac_一键启动_start.command  win_一键关闭_close.bat  win_一键启动_start.bat
docs/: HowToRun_cn.md  HowToRun_en.md  VIDEO_EXPORT_IMPLEMENTATION_PLAN.md  dev_story.md  todo.md
plugins/openkoto-pdf-translator/: README.md  build.py  plugin.json  pyinstaller_entry.py  pyproject.toml
plugins/openkoto-pdf-translator/openkoto_pdf_translator/: __init__.py  backend.py  cache.py  converter.py  doclayout.py  gui.py  high_level.py  mcp_server.py  openkoto_translator.py  pdf2zh.py  translator.py
script/: download_binaries.sh
tests/: test_user_vocabulary.py
textlingo-desktop/: .gitignore  BOOKMARK_IMPLEMENTATION.md  README.md  dev.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
textlingo-desktop/src-tauri/: Cargo.toml  tauri.conf.json
textlingo-desktop/src-tauri/capabilities/: default.json
textlingo-desktop/src-tauri/icons/: icon.icns
textlingo-desktop/src-tauri/src/: ai_service.rs  commands.rs  lib.rs  main.rs  plugin_manager.rs  storage.rs  subtitle_extraction.rs  types.rs  video_server.rs  youtube.rs
textlingo-desktop/src-tauri/tests/: import_export_pack_test.rs  migration_test.rs  srs_algorithm_test.rs  srs_queue_test.rs  subtitle_extraction_test.rs  word_pack_storage_test.rs
web/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
(+233 files in other folders)
