[package]
name = "openkoto-desktop"
version = "0.4.0"
description = "OpenKoto Desktop - AI-powered Article Reader"
authors = ["OpenKoto Team"]
edition = "2021"

[lib]
name = "openkoto_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["sync-secret-service"] }
url = "2.5"
html-escape = "0.2"
readability = "0.2"
regex = "1.10"
scraper = "0.19.0"
urlencoding = "2"
warp = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
tauri-plugin-dialog = "2.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
